--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="pages/listings.html">Listings</a></li>
                 <li><a href="pages/login.html">Login</a></li>
                 <li><a href="pages/register.html">Register</a></li>
+                <li><a href="pages/profile.html">Profile</a></li>
             </ul>
         </nav>
     </header>
