--- a/pages/listings.html
+++ b/pages/listings.html
@@ -20,12 +20,40 @@
         </nav>
     </header>
     <main>
-        <h1>Listings</h1>
-        
+        <header class="listings-header">
+            <h1>Explore Auction Listings</h1>
+            <p>Find and bid on your favorite items. Don't miss out on great deals!</p>
+        </header>
         <div id="searchControls">
             <label for="searchQuery">Search:</label>
             <input type="text" id="searchQuery" placeholder="Search listings..." />
             <button id="searchButton">Search</button>
+        </div>
+
+        <div id="sortingControls" class="sorting">
+            <label for="sortOptions">Sort By:</label>
+            <select id="sortOptions">
+                <option value="highestBid">Highest Bid</option>
+                <option value="mostRecent">Most Recent</option>
+                <option value="endingSoon">Ending Soon</option>
+            </select>
+        </div>
+
+        <div id="filterControls" class="filters">
+            <label for="minBid">Min Bid:</label>
+            <input type="number" id="minBid" placeholder="0" />
+
+            <label for="maxBid">Max Bid:</label>
+            <input type="number" id="maxBid" placeholder="1000" />
+
+            <label for="auctionStatus">Status:</label>
+            <select id="auctionStatus">
+                <option value="all">All</option>
+                <option value="active">Active</option>
+                <option value="ended">Ended</option>
+            </select>
+
+            <button id="applyFilters">Apply Filters</button>
         </div>
 
         <!-- Button to open the modal -->
@@ -67,10 +95,13 @@
             </div>
         </div>
 
+        <div id="loadingSpinner" class="spinner" style="display: none;"></div>
+
         <div id="listingsContainer"></div>
-        <div id="paginationControls">
-            <button id="prevPage" disabled>Previous</button>
-            <button id="nextPage">Next</button>
+        <div id="paginationControls" class="pagination">
+            <button id="prevPage" disabled>&laquo; Previous</button>
+            <span id="currentPage">Page 1</span>
+            <button id="nextPage">Next &raquo;</button>
         </div>
         <p>Explore all available auction listings here.</p>
     </main>
