--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,19 +6,29 @@
   <title>Profile</title>
   <link rel="stylesheet" href="../styles/style.css">
   <script type="module" src="../scripts/script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="listings.html">Listings</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="profile.html" class="active">Profile</a></li>
-      </ul>
-    </nav>
-  </header>
+  <header class="site-header">
+        <div class="container">
+            <div class="logo">
+                <a href="../index.html">My Auction</a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="listings.html">Listings</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="register.html">Register</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                </ul>
+            </nav>
+            <div class="header-icons">
+                <a href="#"><i class="fas fa-search"></i></a>
+                <a href="profile.html"><i class="fas fa-user"></i></a>
+            </div>
+        </div>
+    </header>
   <main class="profile-page">
     <!-- Profile Header Section -->
     <section class="profile-header">
@@ -40,6 +50,10 @@
         <button type="submit">Update Avatar</button>
       </form>
       <button id="logoutButton" class="logout-button">Log Out</button>
+    </section>
+
+    <section class="profile-actions">
+      <button id="openCreateListingModal" class="btn-primary">Create Listing</button>
     </section>
 
     <!-- My Listings Section -->
@@ -78,6 +92,33 @@
             <button type="submit" class="save-button">Save Changes</button>
             <button type="button" id="deleteListingButton" class="delete-button">Delete Listing</button>
           </div>
+        </form>
+      </div>
+    </div>
+
+    <!-- Modal for creating a listing -->
+    <div id="createListingModal" class="modal" style="display: none;">
+      <div class="modal-content">
+        <span id="closeCreateListingModal" class="close">&times;</span>
+        <form id="createListingForm">
+          <h2>Create New Listing</h2>
+          <div class="form-group">
+            <label for="listingTitle">Title:</label>
+            <input type="text" id="listingTitle" placeholder="Enter listing title" required />
+          </div>
+          <div class="form-group">
+            <label for="listingDescription">Description:</label>
+            <textarea id="listingDescription" placeholder="Enter listing description" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="listingDeadline">Deadline:</label>
+            <input type="datetime-local" id="listingDeadline" required />
+          </div>
+          <div class="form-group">
+            <label for="listingMedia">Media (comma-separated URLs):</label>
+            <input type="text" id="listingMedia" placeholder="Enter media URLs" />
+          </div>
+          <button type="submit" class="btn-primary">Create Listing</button>
         </form>
       </div>
     </div>
