--- a/pages/listings.html
+++ b/pages/listings.html
@@ -110,8 +110,29 @@
         </div>
         <p>Explore all available auction listings here.</p>
     </main>
-    <footer>
-        <p>&copy; 2023 Online Auction Platform</p>
-    </footer>
+    <footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-logo">
+      <a href="../index.html">My Auction</a>
+    </div>
+    <nav class="footer-nav">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="listings.html">Listings</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+    <div class="footer-social">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+    <p class="footer-copyright">
+      &copy; 2025 My Auction. All rights reserved.
+    </p>
+  </div>
+</footer>
 </body>
 </html>
