--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <nav class="footer-nav">
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="listings.html">Listings</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
+        <li><a href="/pages/listings.html">Listings</a></li>
+        <li><a href="/pages/profile.html">Profile</a></li>
+        <li><a href="/pages/login.html">Login</a></li>
+        <li><a href="/pages/register.html">Register</a></li>
       </ul>
     </nav>
     <div class="footer-social">
