Fixing deply issues #2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="pages/listings.html" class="btn-primary">Explore Listings</a>
             </div>
             <div class="hero-image">
-                <img src="/Image/auctionimage.png" alt="Auction Hero Image">
+                <img src="Image/auctionimage.png" alt="Auction Hero Image">
             </div>
         </section>
         <section class="featured-auctions">
