--- a/pages/item.html
+++ b/pages/item.html
@@ -31,6 +31,7 @@
       <div class="item-container">
         <!-- Left: Item Image, Ends At, and Bids -->
         <div class="item-image-frame">
+          <div id="sellerName" class="seller-name"></div> <!-- Add this line -->
           <div class="item-image">
             <img id="itemImage" src="" alt="Item Image" />
           </div>
