--- a/pages/item.html
+++ b/pages/item.html
@@ -24,6 +24,11 @@
           <li><a href="profile.html">Profile</a></li>
         </ul>
       </nav>
+      <div class="header-icons">
+        <a href="#"><i class="fas fa-search"></i></a>
+        <a href="pages/profile.html"><i class="fas fa-user"></i></a>
+        <span id="navCredits" class="nav-credits" style="display:none;"></span>
+      </div>
     </div>
   </header>
   <main>
