--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="header-icons">
                 <a href="#"><i class="fas fa-search"></i></a>
                 <a href="pages/profile.html"><i class="fas fa-user"></i></a>
+                <span id="navCredits" class="nav-credits" style="display:none;"></span>
             </div>
         </div>
     </header>
