--- a/pages/profile.html
+++ b/pages/profile.html
@@ -26,7 +26,8 @@
             </nav>
             <div class="header-icons">
                 <a href="#"><i class="fas fa-search"></i></a>
-                <a href="profile.html"><i class="fas fa-user"></i></a>
+                <a href="pages/profile.html"><i class="fas fa-user"></i></a>
+                <span id="navCredits" class="nav-credits" style="display:none;"></span>
             </div>
         </div>
     </header>
